[tool.poetry]
name = "ab_tools"
version = "0.1.0"
description = ""
authors = ["Alex Button"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pre-commit = "^2.20.0"
tbump = "^6.9.0"
mypy = "^1.2.0"
tox = "^4.5.1"
sphinx = ">=1.6,<7"
sphinx-rtd-theme = "^1.2.0"
python-docs-theme = "^2023.3.1"
setuptools = "^69.0.2"
toml = "^0.10.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "<5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
